typescript/checker/tests/conformance/parser/ecmascript5/RegressionTests/parser509668.ts.stderr
error: Unexpected token Some(DotDotDot)
 --> $DIR/tests/conformance/parser/ecmascript5/RegressionTests/parser509668.ts:3:23
  |
3 |   constructor (public ...args: string[]) { }
  |                       ^^^

